Re-aligned unit li elements, minor fixes
* Small fixes to stylesheet.
* Re-aligned unit list elements.
* Fix to nav selection.
* Renamed terrain table.
* Removed footer.
* Updated Readme.

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -5,7 +5,6 @@ body {
   color: #333;
   background-image: url(../images/darkstone.jpg);
   line-height: 1.3;
-  text-rendering: optimizeLegibility;
 }
 
 h3 {
@@ -13,7 +12,7 @@ h3 {
   margin-bottom: 8px;
   margin-top: 0px;
   font-size: 24px;
-}  
+}
 
 table * {
   padding: 0px;
@@ -36,6 +35,11 @@ th {
   width: 150px;
 }
 
+ul {
+  margin: 0px;
+  padding: 0px;
+}
+
 #terrainadjustments {
   line-height: 1.2;
   width: 500px;
@@ -45,8 +49,7 @@ th {
 }
 
 #container {
-  margin: 24px;
-  border: 1px solid #333;
+  margin: 32px auto;
   width: 896px;  
   background-image: url('../images/paper.jpg');
 }
@@ -98,16 +101,18 @@ th, td, p {
   font-size: 18px;
 }
 
-nav, footer {
+nav {
   background-color: #a98;
   float: left;
   width: 100%;
   color: #fed;
-  display: inline;
 }
 
-footer span {
-  padding: 0px 16px;
+footer {
+  margin-top: -2em;
+  color: #a98;
+  font-size: 14px;
+  cursor: pointer;
 }
 
 nav a {
@@ -149,9 +154,10 @@ nav a:hover {
 }
 
 #advancement li, #browserUnits li {
-  width: 102px;
+  width: 112px;
   text-align: center;
   padding-top: 96px;
+  padding-bottom: 1em;
   border-radius: 16px;
   list-style-type: none;
   float: left;
@@ -159,6 +165,7 @@ nav a:hover {
 
 #current {
   font-weight: bold;
+  background-color: #ffd
 }
 
 #description {
@@ -184,7 +191,7 @@ th.terrain, th.defense, th.movement {
 }
 
 .next {
-  cursor: pointer; 
+  cursor: pointer;
 }
 
 #left h3, #right h3 {
@@ -192,15 +199,13 @@ th.terrain, th.defense, th.movement {
 }
 
 #left {
-  position: absolute;
-  top: 96px;
-  left: 32px;
   display: none;
 }
 
 #right {
-  position: absolute;
-  top: 96px;
-  left: 900px;
   display: none;
+}
+
+li:hover {
+  background-color: #fed;
 }
